--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     <string name="skip">Skip</string>
     <string name="next">Next</string>
     <string name="adjust_brightness">Adjust brightness</string>
+    <string name="root_access">Root</string>
+    <string name="architecture">Architecture</string>
+    <string name="build_date">Build date</string>
+    <string name="security_patch_level">Security</string>
+    <string name="kernel">Kernel</string>
 </resources>
