added user apps fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,6 +173,8 @@
     <string name="channels">Channels</string>
     <string name="graphics">Graphics</string>
     <string name="graphics_empty_screen">No graphics information avaliable</string>
+    <string name="user_apps">User apps</string>
+    <string name="system_apps">System apps</string>
 
 
 </resources>
