more refactirong, handlers logic fixed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -224,6 +224,7 @@
     <string name="installed">Installed:</string>
     <string name="updated">Updated:</string>
     <string name="version_app">Version:</string>
+    <string name="pixels">Pixels</string>
 
 
 </resources>
